--- a/app/static/analysis.css
+++ b/app/static/analysis.css
@@ -1,24 +1,209 @@
-.content-main{
-		display: flex;
-		flex-wrap: wrap;
-}
-.content-main> div {
-  background-color: transparent;
-  width: 32%;
-  margin: 5px;
-  text-align: center;
-}
-.content{
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
+:root {
+	--color1: hsla(0, 100%, 90%, 0.333);
+	--color2: hsla(0, 100%, 70%, 0.3);
+	--color3: #ff073a;
+	--shadow-radius: 5px;
 }
 
-#div1, #div2, #div3, #div4, #div5, #div6 {
-		float: left;
-		width: 120px;
-		height: 100px;
-		margin: 10px;
-		padding: top right bottom left;
-		border: 1px solid white;
+
+/* Slots */
+.perkSlot,
+.addonSlot {
+	float: left;
+	width: 100px;
+	height: 100px;
+	margin: 10px;
+	padding: top right bottom left;
+	border: 1px solid white;
+	position: relative;
+}
+
+.perkSlot button {
+	background: url('/static/images/clearbtn.png');
+	cursor: pointer;
+	border: none;
+}
+
+.addonSlot button {
+	background: url('/static/images/clearbtn.png');
+	cursor: pointer;
+	border: none;
+}
+
+.perksSlots {
+	display: flex;
+	/* flex-wrap: wrap; */
+	justify-content: space-around;
+	align-items: center;
+	margin-top: 20px;
+	margin-bottom: 50px;
+}
+
+.addonsSlots {
+	display: flex;
+	/* flex-wrap: wrap; */
+	justify-content: space-around;
+	align-items: center;
+	margin-top: 50px;
+	margin-bottom: 50px;
+}
+
+.addon-image {
+	position: relative;
+	z-index: 1;
+}
+
+.clear-img {
+	position: absolute;
+	z-index: 2;
+	top: -12px;
+	left: 90px;
+}
+
+
+/* Tabs */
+.tab {
+	overflow: hidden;
+	/* border: 1px solid #ccc; */
+	/* background-color: #f1f1f1; */
+	background-color: transparent;
+	list-style-type: none;
+}
+
+.tab button {
+	background-color: inherit;
+	float: left;
+	border: none;
+	outline: none;
+	cursor: pointer;
+	padding: 14px 10px;
+	transition: 0.3s;
+	font-size: 17px;
+	color: white;
+}
+
+.tab button:hover {
+	background-color: var(--color1);
+}
+
+.tab button.active {
+	background-color: var(--color2);
+}
+
+.tabcontent {
+	display: none;
+	padding: 6px 12px;
+	/* border: 1px solid #ccc; */
+	border-top: none;
+	animation: fadeEffect 0.5s;
+}
+
+/* Addons */
+.addonsContent {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+}
+
+.container-addons {
+	position: relative;
+	display: inline-block;
+	pointer-events: none;
+}
+
+.container-addons img {
+	pointer-events: auto;
+	transition: transform .5s ease;
+	/* min-height: 80; */
+	height: 80px;
+	width: 80px;
+}
+
+.flex-container {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
+	align-content: space-between;
+	pointer-events: none;
+}
+
+.flex-container>div {
+	/* background-color: rgb(121, 167, 51); */
+	background-color: transparent;
+	width: 25%;
+	margin: 15px;
+	margin-bottom: 30px;
+	text-align: center;
+}
+
+/* Perks */
+.perksContent {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.perksContent>div {
+	background-color: transparent;
+	width: 32%;
+	margin: 5px;
+	text-align: center;
+}
+
+.subtab {
+	margin-left: -200px;
+	/* border: 1px solid #ccc; */
+	color: white;
+	display: flex;
+	/* justify-content: right; */
+	flex-direction: column;
+	/* background-color: #f1f1f1; */
+	background-color: transparent;
+	/* list-style-type: none; */
+	/* pointer-events: none; */
+}
+
+.subtab button {
+	background-color: inherit;
+	/* float: left; */
+	/* border: 1px solid #ccc; */
+	border: none;
+	outline: none;
+	border-radius: 25px;
+	width: 250px;
+	/* outline: none; */
+	cursor: pointer;
+	padding: 5px 0px;
+	transition: transform .5s ease;
+	font-size: 15px;
+	color: white;
+}
+
+.subtablinks:hover {
+	color: #ff073a;
+	background:  var(--color1);
+	box-shadow: 0 0 10px var(--shadow-radius) var(--color1), 0 0 40px var(--shadow-radius) var(--color1), 0 0 80px var(--shadow-radius) var(--color1);
+}
+
+.subtab button.active {
+	color: var(--color3);
+	background: var(--color2);
+	box-shadow: 0 0 10px var(--shadow-radius) var(--color2), 0 0 40px var(--shadow-radius) var(--color2), 0 0 80px var(--shadow-radius) var(--color2);
+}
+
+.subtablinks {
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+}
+
+.subtabcontent {
+	display: none;
+	padding: 6px 12px;
+	/* border: 1px solid #ccc; */
+	border-top: none;
+	animation: fadeEffect 0.2s;
+}
+
+.killerTab {
+	display: flex;
 }
