--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -22,6 +22,16 @@
 </head>
 
 <body>
+    <div class="dropdown">
+        <button class="dropbtn">
+            <img class="menu-img" src="/static/images/menu1btn.jpg" height="40" width="40">
+            <img class="menu-img-back" src="/static/images/menu2btn.jpg" height="40" width="40">
+        </button>
+        <div class="dropdown-content">
+          <a href="/">Home</a>
+          <a href="/analysis">Analysis</a>
+        </div>
+    </div>
     {% block content %}{% endblock %}
 </body>
 
