--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -24,8 +24,8 @@
 <body>
     <div class="dropdown">
         <button class="dropbtn">
-            <img class="menu-img" src="/static/images/menu1btn.jpg" height="40" width="40">
-            <img class="menu-img-back" src="/static/images/menu2btn.jpg" height="40" width="40">
+            <img class="menu-img" src="/static/images/Logo_dbd_inv.png" height="40" width="40">
+            <!-- <img class="menu-img-back" src="/static/images/Logo_dbd_inv.png" height="40" width="40"> -->
         </button>
         <div class="dropdown-content">
           <a href="/">Home</a>
@@ -33,6 +33,8 @@
         </div>
     </div>
     {% block content %}{% endblock %}
+    </div>
+    <div class="loading"></div>
 </body>
 
 </html>
