--- a/app/static/style_main.css
+++ b/app/static/style_main.css
@@ -85,13 +85,13 @@ body {
 }
 
 .dropdown:hover .menu-img {
-    /* pointer-events: auto; */
-    display: none;
+    /* display: none; */
+    transform: scale(1.4);
 }
 
 .dropdown:hover .menu-img-back {
     display: inline;
-    transform: scale(1.2);
+    /* transform: scale(1.2); */
 }
 
 .dropdown {
@@ -99,6 +99,7 @@ body {
     display: inline-block;
     top: 0px;
     left: -250px;
+    align-items: center;
 }
 
 .dropdown-content {
@@ -124,4 +125,15 @@ body {
 
 .dropdown:hover .dropdown-content {
     display: block;
+}
+
+/* Loading */
+.loading {
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
+	background: url('/static/images/dbdlogo.gif') center no-repeat black;
 }
