--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -32,7 +32,8 @@
           <a href="/analysis">Analysis</a>
         </div>
     </div>
-    {% block content %}{% endblock %}
+    <div class="page">
+        {% block content %}{% endblock %}
     </div>
     <div class="loading"></div>
 </body>
