--- a/app/static/analysis.css
+++ b/app/static/analysis.css
@@ -1,5 +1,5 @@
 :root {
-	--color1: hsla(0, 100%, 90%, 0.45);
+	--color1: hsla(0, 100%, 90%, 0.333);
 	--color2: hsla(0, 100%, 70%, 0.3);
 	--color3: #ff073a;
 	--shadow-radius: 5px;
@@ -13,9 +13,21 @@
 	width: 100px;
 	height: 100px;
 	margin: 10px;
+	margin-bottom: 80px;
 	padding: top right bottom left;
 	border: 1px solid white;
 	position: relative;
+	border-radius: 25px;
+	box-shadow: 0 0 10px var(--shadow-radius) var(--color1), 0 0 40px var(--shadow-radius) var(--color1), 0 0 80px var(--shadow-radius) var(--color1);
+	align-items: center;
+}
+
+.addonSlot img {
+	margin-left: auto;
+	margin-right: auto;
+	border-radius: 25px;
+	width: 100px;
+	height: 100px;
 }
 
 .perkSlot button {
@@ -42,15 +54,19 @@
 .addonsSlots {
 	display: flex;
 	/* flex-wrap: wrap; */
-	justify-content: space-around;
+	flex-direction: column;
+	justify-content: center;
 	align-items: center;
-	margin-top: 50px;
-	margin-bottom: 50px;
+	/* margin: 50px; */
+	margin-left: 50px;
+	margin-right: -120px;
 }
 
 .addon-image {
 	position: relative;
 	z-index: 1;
+	width: 80px;
+	height: 80px;
 }
 
 .clear-img {
@@ -100,16 +116,26 @@
 }
 
 /* Addons */
+.addonsMain {
+	display: flex;
+	/* flex-direction: column; */
+	justify-content: space-around;
+	margin-top: 100px;
+}
+
 .addonsContent {
 	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-around;
+	/* flex-wrap: wrap; */
+	flex-direction: column;
+	justify-content: space-evenly;
+	/* max-width: 50%; */
+	width: 800px;
 }
 
 .container-addons {
-	position: relative;
-	display: inline-block;
-	pointer-events: none;
+    position: relative;
+    display: inline-block;
+    pointer-events: none;
 }
 
 .container-addons img {
@@ -131,13 +157,24 @@
 .flex-container>div {
 	/* background-color: rgb(121, 167, 51); */
 	background-color: transparent;
-	width: 25%;
-	margin: 15px;
+	width: 18%;
+	margin: 5px;
 	margin-bottom: 30px;
 	text-align: center;
 }
 
 /* Perks */
+.container-perks {
+	position: relative;
+	display: inline-block;
+	pointer-events: none;
+}
+
+.container-perks img {
+    pointer-events: auto;
+    min-height: 100;
+}
+
 .perksContent {
 	display: flex;
 	flex-wrap: wrap;
@@ -177,12 +214,11 @@
 	transition: transform .5s ease;
 	font-size: 15px;
 	color: white;
-	border-radius: 25px;
 }
 
 .subtablinks:hover {
-	color: #ff073a;
-	background:  var(--color1);
+	color: var(--color3);
+	background: var(--color1);
 	box-shadow: 0 0 10px var(--shadow-radius) var(--color1), 0 0 40px var(--shadow-radius) var(--color1), 0 0 80px var(--shadow-radius) var(--color1);
 }
 
