--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+  <link rel="icon" href="/static/images/favicon.png" sizes="32x32" type="image/png">
+
   <link rel="stylesheet" type="text/css" href={{"static/style_main.css"}}>
   {% if css %}
     <link rel="stylesheet" type="text/css" href={{"static/" + css}}>
