--- a/app/static/analysis.css
+++ b/app/static/analysis.css
@@ -170,6 +170,10 @@
 	box-shadow: 0 0 10px var(--shadow-radius) var(--color1), 0 0 40px var(--shadow-radius) var(--color1), 0 0 80px var(--shadow-radius) var(--color1);
 }
 
+.stats-addons {
+	display: none;
+}
+
 .flex-container {
 	display: flex;
 	flex-wrap: wrap;
