--- a/app/static/analysis.css
+++ b/app/static/analysis.css
@@ -174,6 +174,10 @@
 	display: none;
 }
 
+.stats-addon {
+	/* color: hsla(0, 69%, 45%, 0.9); */
+}
+
 .flex-container {
 	display: flex;
 	flex-wrap: wrap;
