--- a/app/templates/analysis.html
+++ b/app/templates/analysis.html
@@ -76,7 +76,7 @@
 							</center>
 							{% endfor %}
 						</div>
-						<div class="stats-temp tempSlot" id={{ name + '-temp-stats' }}>
+						<div class="stats-temp tempSlot hidden" id={{ name + '-temp-stats' }}>
 							<center>
 								<p class="stats-value-temp" value={{ stat['Base-'+name] }}>
 									{{ stat['Base-'+name] }}</p>
