--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,107 +1,116 @@
 {% extends "layout.html" %}
 {% block content %}
 <ul class="tab">
-    <button class="tablinks" onclick="openTab(event, 'Survivor-Perks')">Survivor Perks</button>
-    <button class="tablinks" onclick="openTab(event, 'Killer-Perks')">Killer Perks</button>
-    <button class="tablinks" onclick="openTab(event, 'Killer-Addons')">Killer Addons</button>
-    <button class="tablinks" onclick="openTab(event, 'Items')" id="defaultOpen">Items</button>
+	<button class="tablinks" onclick="openTab(event, 'Survivor-Perks')">Survivor Perks</button>
+	<button class="tablinks" onclick="openTab(event, 'Killer-Perks')">Killer Perks</button>
+	<button class="tablinks" onclick="openTab(event, 'Killer-Addons')">Killer Addons</button>
+	<button class="tablinks" onclick="openTab(event, 'Items')" id="defaultOpen">Items</button>
 
 </ul>
+
 {% for cat, perks in Perks.items() %}
 <div class="tabcontent" id={{ cat }}>
-    <div class="flex-container">
-        {% for key, perk in perks.items() %}
-        <div class="container-perks">
-            <img class="perk-image lozad" draggable="true" ondragstart="drag(event)" id={{ key }}
-                data-src={{ perk.image }} height="100" width="100">
-            <img class="back-img lozad" src={{ perk['image_alt'] }} alt="Card Front" height="100" width="100"
-                credit="u/LynxRecruit">
-            <figcaption>{{ perk.name }}</figcaption>
-            <div class="overlay">
-                <p>{{ perk.description }}</p>
-            </div>
-            <!-- <a style="font-size: 15px" , href="#">{{ perk.teachable }}</a> -->
-        </div>
-        {% endfor %}
-    </div>
+	<div class="flex-container">
+		{% for key, perk in perks.items() %}
+		<div class="container-perks">
+			<img class="perk-image lozad" draggable="true" ondragstart="drag(event)" id={{ key }}
+				data-src={{ perk.image }} height="100" width="100">
+			<img class="back-img lozad" src={{ perk['image_alt'] }} alt="Card Front" height="100" width="100"
+				credit="u/LynxRecruit">
+			<figcaption>{{ perk.name }}</figcaption>
+			<div class="overlay">
+				<p>{{ perk.description }}</p>
+			</div>
+			<!-- <a style="font-size: 15px" , href="#">{{ perk.teachable }}</a> -->
+		</div>
+		{% endfor %}
+	</div>
 </div>
 {% endfor %}
+
 <div class="tabcontent" id="Killer-Addons">
-    <ul class="subtab">
-        {% for name,info in Killer_Addons.items() %}
-        <button class="subtablinks" onclick="openSubTab(event, '{{ name }}'); dimElem(event, 'subtablinks');">
-            <img class="lozad" data-src={{ info['killer-image-alt'] }} height="125" width="125" credit="@WholeyeetRye">
-            <figcaption>{{ name }}</figcaption>
-        </button>
-        {% endfor %}
-    </ul>
-    {% for name,info in Killer_Addons.items() %}
-    <div class="subtabcontent" id='{{ name }}'>
-        <center>
-            <h2>{{ info.power }}</h2>
-            <img id="power-image lozad" data-src={{ info['power-image'] }}>
-            <p>{{ info['power-description'] }}</p>
-        </center>
-        {% for rarity,addons in info['addons'].items() %}
-        <h3>
-            <center>{{ rarity }}</center>
-        </h3>
-        <div class="flex-container" id={{ rarity }}>
-            {% for addon in addons %}
-            <div class="container-addons">
-                <img class="addon-image lozad" data-src={{ addon['addon-image-alt'][:-3] + 'jpg' }} height="80"
-                    width="80" credit="u/ambieobambie">
-                <figcaption>{{ addon['addon-name'] }}</figcaption>
-                <div class="overlay">
-                    <p>{{ addon['addon-description'] }}</p>
-                </div>
-            </div>
-            {% endfor %}
-        </div>
-        {% endfor %}
-    </div>
-    {% endfor %}
+	<ul class="subtab">
+		{% for name,info in Killer_Addons.items() %}
+		<button class="subtablinks" onclick="openSubTab(event, '{{ name }}'); dimElem(event, 'subtablinks');">
+			<img class="lozad" data-src={{ info['killer-image-alt'] }} height="125" width="125" credit="@WholeyeetRye">
+			<figcaption>{{ name }}</figcaption>
+		</button>
+		{% endfor %}
+	</ul>
+	{% for name,info in Killer_Addons.items() %}
+	<div class="subtabcontent" id='{{ name }}'>
+		<center>
+			<h2>{{ info.power }}</h2>
+			<img id="power-image lozad" data-src={{ info['power-image'] }}>
+			<p>{{ info['power-description'] }}</p>
+		</center>
+		{% for rarity,addons in info['addons'].items() %}
+		<h3>
+			<center>{{ rarity }}</center>
+		</h3>
+		<div class="flex-container" id={{ rarity }}>
+			{% for addon in addons %}
+			<div class="container-addons">
+				<img class="addon-image lozad" data-src={{ addon['addon-image-alt'][:-3] + 'jpg' }} height="80"
+					width="80" credit="u/ambieobambie">
+				<figcaption>{{ addon['addon-name'] }}</figcaption>
+				<div class="overlay">
+					<!-- <p>{{ addon['addon-description'] }}</p> -->
+					<p>{{ addon['addon-effect'] }}</p>
+				</div>
+			</div>
+			{% endfor %}
+		</div>
+		{% endfor %}
+	</div>
+	{% endfor %}
 </div>
 <div class="tabcontent" id="Items">
-    <ul class="subtab">
-        {% for name,info in Items.items() %}
-        <button class="subtablinks" onclick="openSubTab(event, '{{ name }}'); dimElem(event, 'subtablinks');">
-            <img class="lozad" data-src={{ info.image }} height="125" width="125">
-            <figcaption>{{ name }}</figcaption>
-        </button>
-        {% endfor %}
-    </ul>
-    {% for name,info in Items.items() %}
-    <div class="subtabcontent" id='{{ name }}'>
-        <center>
-            <h2>{{ name }}</h2>
-            <p>{{ info['description'] }}</p>
-        </center>
-        {% for rarity,items in info['versions'].items() %}
-        <h3>
-            <center>{{ rarity }}</center>
-        </h3>
-        <div class="flex-container" id={{ rarity }}>
-            {% for item in items %}
-            <div class="container-items">
-                <img class="item-image lozad" data-src={{ item["image-alt"] }} height="80"
-                    width="80" credit="u/ambieobambie">
-                <figcaption>{{ item.name }}</figcaption>
-                <div class="overlay">
-                    <p>{{ item.description }}</p>
-                </div>
-            </div>
-            {% endfor %}
-        </div>
-        {% endfor %}
-    </div>
-    {% endfor %}
+	<ul class="subtab">
+		{% for name,info in Items.items() %}
+		<button class="subtablinks" onclick="openSubTab(event, '{{ name }}'); dimElem(event, 'subtablinks');">
+			<img class="lozad" data-src={{ info.image }} height="125" width="125">
+			<figcaption>{{ name }}</figcaption>
+		</button>
+		{% endfor %}
+	</ul>
+	{% for name,info in Items.items() %}
+	<div class="subtabcontent" id='{{ name }}'>
+		<center>
+			<h2>{{ name }}</h2>
+			<p>{{ info['description'] }}</p>
+		</center>
+		{% for rarity,items in info['versions'].items() %}
+		<h3>
+			<center>{{ rarity }}</center>
+		</h3>
+		<div class="flex-container" id={{ rarity }}>
+			{% for item in items %}
+			<div class="container-items">
+				<img class="item-image lozad" data-src={{ item["image-alt"] }} height="80" width="80"
+					credit="u/ambieobambie">
+				<figcaption>{{ item.name }}</figcaption>
+				<div class="overlay">
+					<p>{{ item.description }}</p>
+				</div>
+			</div>
+			{% endfor %}
+		</div>
+		{% endfor %}
+	</div>
+	{% endfor %}
 </div>
 <script>
-    const observer = lozad(); // lazy loads elements with default selector as '.lozad'
-    observer.observe();
+	var elems = document.getElementsByClassName('overlay')
+	for (i = 0; i < elems.length; i++){
+		elems[i].innerHTML = elems[i].innerHTML.split("\n").join("<br />");
+	}
 </script>
 <script>
-    document.getElementById("defaultOpen").click();
+	const observer = lozad(); // lazy loads elements with default selector as '.lozad'
+	observer.observe();
+</script>
+<script>
+	document.getElementById("defaultOpen").click();
 </script>
 {% endblock content %}
